--- a/css/styles.css
+++ b/css/styles.css
@@ -41,6 +41,7 @@ button {
 img {
   display: block;
   max-width: 100%;
+  width: 100%;
   height: auto;
 }
 
@@ -77,7 +78,8 @@ address {
 
 /* HEADER */
 .header {
-  margin-top: 30px;
+  padding-top: 30px;
+  padding-bottom: 106px;
 }
 .header-menu {
   display: flex;
@@ -130,33 +132,66 @@ address {
 
 /* HERO */
 .hero {
+  padding-bottom: 100px;
 }
+
+.hero-container {
+  display: flex;
+}
+
 .hero-coffee-img {
+  width: 683px;
+  height: 527px;
 }
+
+.hero-wrapper {
+  /* margin-top: auto; */
+  /* margin-bottom: auto; */
+  /* padding-top: 168px; */
+  display: flex;
+  flex-direction: column;
+  padding-left: 28px;
+
+  justify-content: center;
+}
+
 .hero-text-new {
   color: #0039dd;
   font-size: 12px;
   font-weight: 500;
   line-height: 1.3;
 }
+
 .hero-title {
   color: #282828;
   font-size: 40px;
   font-weight: 700;
   line-height: 1.3;
+
+  padding-bottom: 18px;
 }
 .hero-text {
-  color: var(--11, #282828);
+  color: #282828;
   font-size: 16px;
   line-height: 1.5;
+
+  padding-bottom: 15px;
 }
 .hero-more-link {
+  text-align: center;
+  padding: 13px;
   color: #f8f8f8;
   font-size: 16px;
   font-weight: 500;
   line-height: normal;
   border-radius: 25px;
   background-color: #f90;
+  min-width: 174px;
+  width: fit-content;
+}
+
+.hero-more-link span {
+  margin-left: 8px;
 }
 
 /* INTERESTING */
