--- a/css/styles.css
+++ b/css/styles.css
@@ -76,6 +76,18 @@ address {
   padding-bottom: 120px;
 }
 
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type="number"] {
+  -moz-appearance: textfield;
+}
+
 /* HEADER */
 .header {
   padding-top: 30px;
@@ -186,8 +198,9 @@ address {
   line-height: normal;
   border-radius: 25px;
   background-color: #f90;
+  align-self: flex-start;
   min-width: 174px;
-  width: fit-content;
+  /* width: fit-content; */
 }
 
 .hero-more-link span {
@@ -196,18 +209,33 @@ address {
 
 /* INTERESTING */
 .interesting {
+  padding-bottom: 110px;
 }
+
+.interesting-container {
+  display: flex;
+}
+
+.interesting-wrapper {
+  display: flex;
+  flex-direction: column;
+  padding-right: 132px;
+  justify-content: center;
+}
+
 .interesting-title {
   color: #282828;
   font-size: 36px;
   font-weight: 700;
   line-height: 1.3;
+  padding-bottom: 18px;
 }
 .interesting-text {
   color: #282828;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
+  padding-bottom: 15px;
 }
 .interesting-more-link {
   color: #0039dd;
@@ -216,20 +244,48 @@ address {
   line-height: normal;
 }
 .interesting-coffee-img {
+  width: 582px;
+  height: 564px;
 }
 
 /* SALES */
 .sales {
+  padding-bottom: 87px;
 }
+
+.sales-wrapper {
+  display: flex;
+
+  justify-content: space-between;
+}
+
 .sales-title {
 }
 .sales-all-link {
+  color: #ff3939;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: normal;
 }
 .sales-list {
+  display: flex;
+  gap: 30px;
 }
 .sales-item {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #f2f2f2;
+  border-radius: 5%;
+  flex-basis: calc((100% - 60px) / 3);
 }
 .sales-item-img {
+  /* width: 146px; */
+  width: auto;
+  height: 322px;
+  margin-bottom: 15px;
 }
 .sales-item-name {
   color: #282828;
@@ -244,20 +300,66 @@ address {
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
+  margin-bottom: 12px;
 }
+
+.sales-price-wrapper {
+  display: flex;
+  width: 174px;
+  justify-content: space-between;
+  margin-bottom: 15px;
+}
+
 .sales-promotional-price {
   color: #ff3939;
-  text-align: center;
+  /* text-align: center; */
   font-size: 20px;
   font-weight: 600;
   line-height: 1.5;
   text-decoration: line-through;
 }
 .sales-price {
+  color: #282828;
+  /* text-align: center; */
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5; /* 30px */
 }
+
+.sales-form {
+  background-color: #fff;
+  border-radius: 25px;
+  display: flex;
+  justify-content: space-between;
+  width: 174px;
+  padding: 12px 22px;
+  margin-bottom: 10px;
+}
+
+.sales-input {
+  text-align: center;
+  max-width: 2em;
+  border: none;
+  color: #282828;
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 1.5; /* 21px */
+}
+
+.sales-plus,
+.sales-minus {
+  border: none;
+  background-color: transparent;
+}
+
 .sales-btn-buy {
   border-radius: 25px;
   background-color: #f90;
+  width: 174px;
+  height: 46px;
+  padding: 12px 22px;
+  border: none;
 }
 
 /* SUBSCRIBE */
