--- a/css/styles.css
+++ b/css/styles.css
@@ -396,6 +396,13 @@ input[type="number"] {
   width: 253px;
   height: 46px;
   margin-right: -2px;
+  border-radius: 25px 0px 0px 25px;
+  border-top: 1px solid rgba(40, 40, 40, 0.5);
+
+  border-bottom: 1px solid rgba(40, 40, 40, 0.5);
+
+  border-left: 1px solid rgba(40, 40, 40, 0.5);
+  padding-left: 22px;
 }
 
 .subscribe-input::placeholder {
@@ -434,7 +441,18 @@ input[type="number"] {
   padding-bottom: 20px;
 }
 
+.footer-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
 .footer-logo {
+  display: block;
+  margin-bottom: 15px;
+}
+
+.footer-logo-icon {
+  fill: #f8f8f8;
 }
 
 .footer-about-text {
@@ -443,46 +461,110 @@ input[type="number"] {
   font-weight: 400;
   line-height: 1.5;
 }
+
+.footer-wrapper-right {
+  display: flex;
+  gap: 120px;
+}
+
 .footer-menu-buy {
 }
+
 .footer-buy-item {
   color: #d9d9d9;
   font-size: 16px;
   line-height: 1.5;
 }
+
+.footer-buy-item:not(:last-child) {
+  margin-bottom: 15px;
+}
+
 .footer-buy-link {
   color: #d9d9d9;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
 }
+
 .footer-menu-about {
 }
+
 .footer-about-item {
 }
+
+.footer-about-item:not(:last-child) {
+  margin-bottom: 15px;
+}
+
 .footer-about-link {
   color: #d9d9d9;
   font-size: 16px;
   font-weight: 400;
   line-height: 1.5;
 }
+
 .footer-follow-text {
   color: #d9d9d9;
   font-size: 16px;
   font-weight: 600;
   line-height: 1.5; /* 24px */
+  margin-bottom: 15px;
 }
+
 .footer-social {
+  display: flex;
+  gap: 20px;
 }
 .footer-social-item {
 }
 .footer-social-link {
 }
-.footer-social-icon {
+
+.footer-social-facebook {
+  background-color: #3d5a98;
+  fill: #ffffff;
 }
+
+.footer-social-instagram {
+  fill: #fff;
+  background-image: radial-gradient(
+      circle farthest-corner at 35% 90%,
+      #fec564,
+      transparent 50%
+    ),
+    radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%),
+    radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%),
+    radial-gradient(
+      ellipse farthest-corner at 20% -50%,
+      #5258cf,
+      transparent 50%
+    ),
+    radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%),
+    radial-gradient(
+      ellipse farthest-corner at 60% -20%,
+      #893dc2,
+      transparent 50%
+    ),
+    radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent),
+    linear-gradient(
+      #6559ca,
+      #bc318f 30%,
+      #e33f5f 50%,
+      #f77638 70%,
+      #fec66d 100%
+    );
+}
+
+.footer-social-twitter {
+  background-color: #1d9bf0;
+  fill: #ffffff;
+}
+
 .footer-copyright {
   color: #d9d9d9;
   font-size: 12px;
   font-weight: 400;
   line-height: 1.5; /* 18px */
+  text-align: center;
 }
