--- a/css/styles.css
+++ b/css/styles.css
@@ -205,8 +205,12 @@ input[type="number"] {
   /* width: fit-content; */
 }
 
-.hero-more-link span {
-  margin-left: 8px;
+.hero-more-link > span {
+  margin-right: 8px;
+}
+
+.hero-gt-icon {
+  fill: #f8f8f8;
 }
 
 /* INTERESTING */
@@ -284,6 +288,7 @@ input[type="number"] {
   gap: 30px;
 }
 .sales-item {
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -292,6 +297,32 @@ input[type="number"] {
   background-color: #f2f2f2;
   border-radius: 5%;
   flex-basis: calc((100% - 60px) / 3);
+}
+
+.sales-discount-wrapper {
+  position: absolute;
+  top: 28px;
+  right: 28px;
+  width: 70px;
+  height: 70px;
+  background-color: #ff3939;
+  display: flex;
+  border-radius: 50%;
+}
+
+.sales-discount {
+  /* display: flex; */
+  color: #f0f0f0;
+  font-family: Montserrat;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: 1.5;
+  margin: 0 auto;
+  /* justify-content: center; */
+  /* align-items: center;
+  align-content: center; */
+  align-self: center;
 }
 .sales-item-img {
   /* width: 146px; */
